--- a/frontend/HTML/index.html
+++ b/frontend/HTML/index.html
@@ -35,8 +35,8 @@
                 <li><strong>Usuário:</strong> admin</li>
                 <li><strong>Senha:</strong> 1234</li>
             </ul>
-            <p>Após o login, o usuário administrador poderá acessar a seção de configurações e cadastrar outros usuários
-                com diferentes permissões, conforme necessário.</p>
+            <p>Após o login, o usuário administrador poderá acessar a seção de configurações e cadastrar outros usuários,
+            conforme necessário.</p>
         </section>
 
         <section class="cta">
