--- a/frontend/HTML/agenda.html
+++ b/frontend/HTML/agenda.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 
 <head>
-    <link rel="icon" type="image/x-icon" href="../IMG/logo.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de Cliente - Controle de Pragas</title>
+    <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/evo-calendar@1.1.3/evo-calendar/css/evo-calendar.min.css" />
     <link rel="stylesheet" href="../CSS/base.css">
 </head>
 
 <body>
-
     <div class="sidebar">
         <h2>Controle de Pragas</h2>
         <!-- Sidebar padronizada -->
@@ -32,35 +32,18 @@
                 <li onclick="logout()">🚪 Sair</li>
             </ul>
         </nav>
-    </div>
 
+    </div>
     <div class="content">
-        <h1>Cadastro de Cliente</h1>
-        <div class="card">
-            <h3>📝 Preencha os dados do Cliente</h3>
-            <form id="formCadastro">
-                <div class="input-group">
-                    <label for="cnpjcpf">CNPJ/CPF *</label>
-                    <input type="text" id="cnpjcpf" name="cnpjcpf" required>
-                </div>
-                <div class="input-group">
-                    <label for="nome">Nome *</label>
-                    <input type="text" id="nome" name="nome" required>
-                </div>
-                <div class="input-group">
-                    <label for="telefone">Telefone</label>
-                    <input type="text" id="telefone" name="telefone">
-                </div>
-                <div class="input-group">
-                    <label for="email">E-mail</label>
-                    <input type="email" id="email" name="email">
-                </div>
-                <button type="submit" class="btn-salvar">💾 Salvar</button>
-            </form>
-        </div>
+        <h1>📅 Agenda de Serviços</h1>
+        <div id="calendar"></div>
     </div>
 
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/evo-calendar@1.1.3/evo-calendar/js/evo-calendar.min.js"></script>
     <script src="../JS/base.js"></script>
+
 </body>
 
 </html>
