--- a/frontend/HTML/clientes.html
+++ b/frontend/HTML/clientes.html
@@ -13,7 +13,7 @@
     <title>Clientes - Controle de Pragas</title>
 
     <!-- Link para o arquivo de estilos CSS específico da tela de clientes -->
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/clientes.css">
     <link rel="stylesheet" href="../CSS/base.css">
 </head>
@@ -22,31 +22,24 @@
     <!-- Barra lateral (menu de navegação do sistema) -->
     <div class="sidebar">
         <h2>Controle de Pragas</h2>
-        <ul>
-            <!-- Link para a tela de dashboard -->
-            <li onclick="window.location.href='dashboard.html'">🏠 Dashboard</li>
-
-            <!-- Página atual: Clientes (sem redirecionamento) -->
-            <li>🏢 Clientes</li>
-
-            <!-- Link para a tela de serviços -->
-            <li onclick="window.location.href='Servico.html'">🪲 Serviços</li>
-
-            <!-- Item de menu que expande o submenu de configurações -->
-            <li onclick="toggleSubmenu()" class="config-toggle">
-                ⚙ Configurações <span id="seta">▼</span>
-            </li>
-
-            <!-- Submenu com várias opções de configuração -->
-            <ul class="submenu" id="submenu">
-                <li onclick="window.location.href='usuarios.html'">👤 Usuários</li>
-                <li onclick="window.location.href='confservico.html'">🛠️Configuração De Serviços</li>
-
+        <!-- Sidebar padronizada -->
+        <nav class="sidebar">
+            <h2>Controle de Pragas</h2>
+            <ul>
+                <li onclick="window.location.href='dashboard.html'">🏠 Dashboard</li>
+                <li onclick="window.location.href='clientes.html'">🏢 Clientes</li>
+                <li onclick="window.location.href='servico.html'">🪲 Serviços</li>
+                <li onclick="window.location.href='agenda.html'">📅 Agenda</li>
+                <li class="config-toggle" onclick="toggleSubmenu()" aria-expanded="false" aria-controls="submenu">
+                    ⚙ Configurações <span id="seta">▼</span>
+                    <ul class="submenu" id="submenu" role="menu" aria-label="Submenu de configurações">
+                        <li onclick="window.location.href='usuarios.html'">👤 Usuários</li>
+                        <li onclick="window.location.href='tipoServico.html'">📦 Tipo de Serviço</li>
+                    </ul>
+                </li>
+                <li onclick="logout()">🚪 Sair</li>
             </ul>
-
-            <!-- Opção de logout -->
-            <li onclick="logout()">🚪 Sair</li>
-        </ul>
+        </nav>
     </div>
 
     <!-- Área principal de conteúdo da página -->
