--- a/frontend/HTML/dashboardCliente.html
+++ b/frontend/HTML/dashboardCliente.html
@@ -13,27 +13,24 @@
 <body>
     <div class="sidebar">
         <h2>Controle de Pragas</h2>
-        <ul>
-            <li onclick="window.location.href='dashboard.html'">🏠 Dashboard</li>
-            <li onclick="window.location.href='clientes.html'">🏢 Clientes</li>
-            <li onclick="window.location.href='servico.html'">🪲 Serviços</li>
-
-            <!-- Item com submenu -->
-            <li onclick="toggleSubmenu()" class="config-toggle">
-                ⚙ Configurações <span id="seta">▼</span>
-            </li>
-
-            <!-- Submenu oculto/expansível -->
-            <ul class="submenu" id="submenu">
-                <li onclick="window.location.href='usuarios.html'">👤 Usuários</li>
-                <li onclick="window.location.href='confservico.html'">🛠️Configuração De Serviços</li>
-            </ul>
-
-            <!-- Logout -->
+        <!-- Sidebar padronizada -->
+        <nav class="sidebar">
+            <h2>Controle de Pragas</h2>
             <ul>
+                <li onclick="window.location.href='dashboard.html'">🏠 Dashboard</li>
+                <li onclick="window.location.href='clientes.html'">🏢 Clientes</li>
+                <li onclick="window.location.href='servico.html'">🪲 Serviços</li>
+                <li onclick="window.location.href='agenda.html'">📅 Agenda</li>
+                <li class="config-toggle" onclick="toggleSubmenu()" aria-expanded="false" aria-controls="submenu">
+                    ⚙ Configurações <span id="seta">▼</span>
+                    <ul class="submenu" id="submenu" role="menu" aria-label="Submenu de configurações">
+                        <li onclick="window.location.href='usuarios.html'">👤 Usuários</li>
+                        <li onclick="window.location.href='tipoServico.html'">📦 Tipo de Serviço</li>
+                    </ul>
+                </li>
                 <li onclick="logout()">🚪 Sair</li>
             </ul>
-        </ul>
+        </nav>
     </div>
     <div class="content">
         <h1>Dashboard do Cliente</h1>
