--- a/frontend/HTML/dashboardCliente.html
+++ b/frontend/HTML/dashboardCliente.html
@@ -6,29 +6,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cliente Dashboard - Controle de Pragas</title>
-    <link rel="stylesheet" href="../CSS/base.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="../CSS/base.css">
 </head>
 
 <body>
-    <div class="sidebar">
-        <h2>Controle de Pragas</h2>
-        <!-- Sidebar padronizada -->
+<!-- Barra lateral de navegação -->
+    <div>
         <nav class="sidebar">
             <h2>Controle de Pragas</h2>
             <ul>
-                <li onclick="window.location.href='dashboard.html'">🏠 Dashboard</li>
-                <li onclick="window.location.href='clientes.html'">🏢 Clientes</li>
-                <li onclick="window.location.href='servico.html'">🪲 Serviços</li>
-                <li onclick="window.location.href='agenda.html'">📅 Agenda</li>
-                <li class="config-toggle" onclick="toggleSubmenu()" aria-expanded="false" aria-controls="submenu">
-                    ⚙ Configurações <span id="seta">▼</span>
-                    <ul class="submenu" id="submenu" role="menu" aria-label="Submenu de configurações">
-                        <li onclick="window.location.href='usuarios.html'">👤 Usuários</li>
-                        <li onclick="window.location.href='tipoServico.html'">📦 Tipo de Serviço</li>
-                    </ul>
+                <li onclick="window.location.href='dashboard.html'">
+                    <i class="bi bi-house-door-fill"></i> Dashboard
                 </li>
-                <li onclick="logout()">🚪 Sair</li>
+                <li onclick="window.location.href='clientes.html'">
+                    <i class="bi bi-buildings-fill"></i> Clientes
+                </li>
+                <li onclick="window.location.href='servico.html'">
+                    <i class="bi bi-bug-fill"></i> Serviços
+                </li>
+                <li onclick="window.location.href='agenda.html'">
+                    <i class="bi bi-calendar-event-fill"></i> Agenda
+                </li>
+                <li class="config-toggle" onclick="toggleSubmenu()" aria-expanded="false" aria-controls="submenu">
+                    <i class="bi bi-gear-fill"></i> Configurações <span id="seta">▼</span>
+                </li>
+                <ul class="submenu" id="submenu" role="menu" aria-label="Submenu de configurações">
+                    <li onclick="window.location.href='usuarios.html'">
+                        <i class="bi bi-person-fill"></i> Usuários
+                    </li>
+                    <li onclick="window.location.href='tipoServico.html'">
+                        <i class="bi bi-box-fill"></i> Tipo de Serviço
+                    </li>
+                </ul>
+                <li onclick="logout()">
+                    <i class="bi bi-box-arrow-right"></i> Sair
+                </li>
             </ul>
         </nav>
     </div>
