--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,7 +32,7 @@
             <h3>Acesso ao Sistema</h3>
             <p><strong>Login padrão para primeiro acesso:</strong></p>
             <ul>
-                <li><strong>Usuário:</strong> admin</li>
+                <li><strong>Usuário:</strong> Admin</li>
                 <li><strong>Senha:</strong> 1234</li>
             </ul>
             <p>Após o login, o usuário administrador poderá acessar a seção de configurações e cadastrar outros usuários,
