--- a/frontend/HTML/primeirocadastro.html
+++ b/frontend/HTML/primeirocadastro.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -5,42 +7,41 @@
     <link rel="icon" href="../IMG/logo.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - GreenSea Controle de Pragas</title>
+    <title>Criar Conta - GreenSea</title>
+    <!-- Reaproveitando o mesmo CSS da página de login -->
     <link rel="stylesheet" href="../css/login.css">
 </head>
 
 <body>
     <div class="login-container">
         <img src="../IMG/LOGO GREENSEA.png" alt="Logo da Empresa" class="logo">
-        <h2>Acesso ao Sistema</h2>
+        <h2>Criação de Conta</h2>
 
         <div class="input-container">
-            <input type="text" id="usuario" placeholder="Usuário">
+            <input type="text" id="nomeCompleto" placeholder="Nome Completo">
+        </div>
+
+        <div class="input-container">
+            <input type="text" id="usuario" placeholder="Nome de Usuário">
         </div>
 
         <div class="input-container">
             <input type="password" id="senha" placeholder="Senha">
-            <span class="toggle-password" onclick="toggleSenha()">👁️</span>
         </div>
 
-        <div class="remember-container">
-            <label>
-                <input type="checkbox" id="lembrarMe"> Lembrar-me
-            </label>
+        <div class="input-container">
+            <input type="password" id="confirmarSenha" placeholder="Confirmar Senha">
         </div>
 
-        <button class="btn-login" onclick="fazerLogin()">Entrar</button>
+        <button class="btn-login">Criar Conta</button>
         <p class="mensagem" id="mensagem"></p>
 
-        <!-- SEÇÃO ADICIONADA -->
         <div class="links-adicionais">
-            <a href="/HTML/Sobrenos.html">Sobre nós</a>
-            <a href="/HTML/primeirocadastro.html">Criar conta</a>
+            <!-- Link para voltar à página de login -->
+            <a href="/index.html">Já tem uma conta? Faça login</a>
         </div>
-        <!-- FIM DA SEÇÃO ADICIONADA -->
 
     </div>
-    <script src="../js/login.js"></script>
 </body>
 
 </html>
